# omal

./: README.md  dune-project  omal.opam
lib/: ast.ml  dune  entry.ml  eval.ml  lexer.mll  menhir_parser.mly  parser.ml  repl.ml
test/: dune
